added about/board etc..

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,17 @@
-<br/>
-<div class="row ">
+<div class="row " style="margin-top: 5px;">
    <ul id="footer" style="list-style: none; padding: 0; margin: 0; display: flex; justify-content: space-between;">
            <li> <a href="about.html">Email Absence</a> </li>
-           <li> <a href="faculty.html">Faculty</a> </li>
-           <li> <a href="board.html">Board Of Directors</a> </li>
-           <li> <a href="employment.html">Employment</a> </li>
-           <li> <a href="support.html">Support TCMS</a> </li>
+           <li> <a href="/faculty">Faculty</a> </li>
+           <li> <a href="/board">Board Of Directors</a> </li>
+           <li> <a href="/employment">Employment</a> </li>
+           <li> <a href="/support">Support TCMS</a> </li>
     </ul>
 </div>
+<p class="text-center" style="font-size: 0.7em">
+Back to Basics Charter School Foundation, Inc.,  &nbsp Alba Mas, President  <br/>
+11734 Jefferson Rd Thonotosassa, FL 33592  &nbsp 813.987.6555 fx 813.324.8974  <br/>
+SDHC School #6606  <a href="/required">Statutorily Required Information </a> <br/>
+</p>
 <div class="row"> <br/> </div>
 
 </div><!-- /.container -->
