--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,29 @@
-{{ partial "header.html" . }}
+{{ partial "header_index.html" }}
 
-<!-- the main part of the page -->
+{{ partial "slideshow.html" }}
 
-{{ partial "footer.html" . }}
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row"> <br/> </div>
+
+        <!-- Marketing Icons Section -->
+        <div class="row">
+           <div class="col-md-3 col-sm-6">
+              <img class="img-responsive img-circle " src="images/shaw.jpg" alt="">
+              <div class="panel-body"> <h4 class="text-center menufont"> Ms. Tavia Shaw <br/> Principal</h4> </div>
+          </div>
+           <div class="col-md-9 col-sm-6 text-justify " style="font-family: 'Sansita', serif;" >
+               <p> Happy New Year and Welcome Back!!! </p>
+                <p>It is amazing how quickly this school year is passing by.  We have now begun the 2nd semester and the 1st semester report cards will be available online on January 23rd, 2017. Please be sure to have your sign-on information handy.  If you have lost your child’s PIN please contact the office for assistance. On this report card you will see a semester grade which is earned based on both nine weeks grades and the semester exam. Your child must earn a semester grade of “D” to receive credit for each course. If your child has failed the semester you will be given information on how to recover the credit for the course. </p>        
+
+            <p> If you have any questions related to middle school grading, please contact your Grade Level Administrator. If you have any questions regarding your child’s grades or progress, please contact your child’s teacher.</p>
+           <p> Sincerely, <br/> Tavia Shaw, M.Ed <br/> Principal </p>
+            </div>
+        </div>
+
+<div class="bar"></div>
+
+
+    {{ partial "footer_index.html" }}
