--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,16 +1,12 @@
-/class*!
- * Start Bootstrap - Modern Business (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
 
 /* Global Styles */
 
 html,
 body {
     height: 100%;
-    background-color: #D5D5D5;
-    font-family: 'Glegoo', serif;
+    background-color: #D5D5D5 !important;
+    font-family: 'Sansita', serif !important;
+    font-size: 20px !important;
 }
 
 body {
@@ -47,40 +43,14 @@ header.carousel .fill {
 
 .bar {
     width:            100%;
-	height:           5px;
+    height:           3px;
     background:       #DDD;
-	padding:	      0px;
 }
 
 /* 404 Page Styles */
 
 .error-404 {
     font-size: 100px;
-}
-
-/* Pricing Page Styles */
-
-.price {
-    display: block;
-    font-size: 50px;
-    line-height: 50px;
-}
-
-.price sup {
-    top: -20px;
-    left: 2px;
-    font-size: 20px;
-}
-
-.period {
-    display: block;
-    font-style: italic;
-}
-
-/* Footer Styles */
-
-footer {
-    margin: 50px 0;
 }
 
 /* Responsive Styles */
@@ -159,14 +129,7 @@ div#vision {
 .vg {
 }
 
-.counseling {
-	background-color: #dddddd;
-	padding: 10px;
-}
 
-.nopadding {
-	padding-left: 0 !important;
-}
 
 .slickslider {
     max-width: 800px !important;
@@ -214,4 +177,9 @@ div#vision {
 
 .nav a{
     font-size: 1.3em !important;
+}
+
+.nav a:hover {
+    color: orange !important;
+    background-color: black !important;
 }
