cleaned up duplicate files

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
-{{ partial "header_index.html" }}
+{{ partial "header.html" }}
 
 {{ partial "slideshow.html" }}
 
@@ -26,4 +26,4 @@
 <div class="bar"></div>
 
 
-    {{ partial "footer_index.html" }}
+    {{ partial "footer.html" }}
