--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,6 +13,7 @@
   <title>{{ .Site.Title }}: {{ title .Title }}</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/carousel.css">
   
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono|Metrophobic|Prata|Glegoo|Philosopher|Faster+One|Fjalla+One|Sansita:400,700" rel="stylesheet" type="text/css">
@@ -110,4 +111,3 @@
         <!-- /.container -->
     </nav>
 
-  <div class="container">
