--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<div class="row " style="margin-top: 5px;">
-   <ul id="footer" style="list-style: none; padding: 0; margin: 0; display: flex; justify-content: space-between;">
+<div class="row menufont" style="margin-top: 5px;">
+   <ul id="footer" class="menufont" style="list-style: none; padding: 0; margin: 0; display: flex; justify-content: space-between; font-family:'Fjalla One'">
            <li> <a href="about.html">Email Absence</a> </li>
            <li> <a href="/faculty">Faculty</a> </li>
            <li> <a href="/board">Board Of Directors</a> </li>
@@ -16,8 +16,22 @@ SDHC School #6606  <a href="/required">Statutorily Required Information </a> <br
 
 </div><!-- /.container -->
 
-  <script href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript"> </script>
-  <script href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"> </script>
+<!--script href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript"> </script-->
+<!--script href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"> </script-->
+   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+
+
+
+    <!-- Script to Activate the Carousel -->
+    <script>
+      $(document).ready(function() {
+      $('.myCarousel').carousel({
+          interval: 10000 //changes the speed
+      })
+      });
+    </script>
 </body>
 </html>
 
