--- a/layouts/students/single.html
+++ b/layouts/students/single.html
@@ -1,5 +1,7 @@
 {{ partial "header.html" . }}
 
+<div class="container">
+
 <div class="row">
   <a name="{{ .Params.anchor }}" class="text-center"> <h2>{{ .Params.title }}</h2></a>
   <br/>
