--- a/layouts/custom/about.html
+++ b/layouts/custom/about.html
@@ -1,4 +1,6 @@
 {{ partial "header.html" . }}
+
+<div class="container">
         <!-- Page Heading/Breadcrumbs -->
         <div class="row ">
                 <h1 class="text-center">Terrace Community Middle School </h1>
