--- a/layouts/custom/employment.html
+++ b/layouts/custom/employment.html
@@ -1,5 +1,6 @@
 {{ partial "header.html" . }}
 
+<div class="container">
 <div class="text-justify">
 <h2 class="text-center">Employment</h2>
 <div class="bar"></div>
