--- a/layouts/custom/faculty.html
+++ b/layouts/custom/faculty.html
@@ -1,4 +1,6 @@
 {{ partial "header.html" . }}
+
+<div class="container">
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
