--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,7 +20,7 @@ SDHC School #6606  <a href="/required">Statutorily Required Information </a> <br
 <!--script href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"> </script-->
    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-   <script src="js/bootstrap.min.js"></script>
+   <script src="/js/bootstrap.min.js"></script>
 
 
 
