--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,10 +12,10 @@
 
   <title>{{ .Site.Title }}: {{ title .Title }}</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/carousel.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/carousel.css">
   
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono|Metrophobic|Prata|Glegoo|Philosopher|Faster+One|Fjalla+One|Sansita:400,700" rel="stylesheet" type="text/css">
 </head>
 
@@ -91,10 +91,10 @@
                         <ul class="dropdown-menu">
                             <li> <a href="/parents/pra">About PRA</a> </li>
                             <li> <a href="/parents/businessdirectory">Business Directory</a> </li>
-                            <li> <a href="cafe.html">Calendar</a> </li>
+                            <li> <a href="https://calendar.google.com/calendar/embed?src=tcmstornadoes1516%40gmail.com&ctz=America/New_York">Calendar</a> </li>
                             <li> <a href="http://www.tbarta.com/en/school-program/commuter/school-program">Carpool</a> </li>
                             <li> <a href="https://sdhc.edsby.com/">Edsby</a> </li>
-                            <li> <a href="clinic.html">H.S. Info</a> </li>
+                            <li> <a href="/parents/highschoolinfo">High School Information</a> </li>
                             <li> <a href="clinic.html">Lunch Orders</a> </li>
                             <li> <a href="http://www.sdhc.k12.fl.us/doc/1699/onlinereportcards">Report Cards</a> </li>
                             <li> <a href="ese.html">Socials</a> </li>
@@ -104,6 +104,7 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
