--- a/layouts/section/7thgrade.html
+++ b/layouts/section/7thgrade.html
@@ -1,4 +1,6 @@
-{{ partial "header.html" . }}
+{{ partial "header.html"  }}
+
+<div class="container">
 
     <div class="col-lg-12">
         <a href="#" class="text-center"><h3>Welcome to 7th Grade</h3></a>
@@ -53,4 +55,4 @@
 
 {{ end }}
 
-{{ partial "footer.html" . }}
+{{ partial "footer.html"  }}
