--- a/layouts/section/8thgrade.html
+++ b/layouts/section/8thgrade.html
@@ -1,5 +1,6 @@
-{{ partial "header.html" . }}
+{{ partial "header.html"  }}
 
+<div class="container">
     <div class="col-lg-12">
         <a href="#" class="text-center"><h3>Welcome to 8th Grade</h3></a>
         <div class="bar"></div><br />
@@ -53,4 +54,4 @@
 
 {{ end }}
 
-{{ partial "footer.html" . }}
+{{ partial "footer.html"  }}
