added favicon and statutory info

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="row menufont" style="margin-top: 5px;">
    <ul id="footer" class="menufont" style="list-style: none; padding: 0; margin: 0; display: flex; justify-content: space-between; font-family:'Fjalla One'">
-           <li> <a href="about.html">Email Absence</a> </li>
+           <li> <a href="mailto:school.office@tcmstornadoes.com?Subject=Absence">Email Absence</a> </li>
            <li> <a href="/faculty">Faculty</a> </li>
            <li> <a href="/board">Board Of Directors</a> </li>
            <li> <a href="/employment">Employment</a> </li>
