--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,6 +11,7 @@
   
 
   <title>{{ .Site.Title }}: {{ title .Title }}</title>
+  <link rel="shortcut icon" type="image/x-icon" href="/images/tcms_favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/carousel.css">
